manifests/deployment-persistent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong-app
  template:
    metadata:
      labels:
        app: pong-app
    spec:
      volumes: # Define volume
        - name: counter
          persistentVolumeClaim:
            claimName: main-app-claim
      containers:
        - name: pong-app
          image: summila/pong-app:v0.2
          volumeMounts: # Mount volume
          - name: counter
            mountPath: /var/www/html/data
