manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong-app
  template:
    metadata:
      labels:
        app: pong-app
    spec:
      containers:
        - name: pong-app
          image: summila/pong-app:v0.1
