manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-app-svc
spec:
  type: ClusterIP
  selector:
    app: pong-app
  ports:
    - name: http
      port: 2345
      protocol: TCP
      targetPort: 4000
